--- a/assets/section-rich-text.css
+++ b/assets/section-rich-text.css
@@ -33,16 +33,18 @@
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
-
+.desktop_no_top_space .rich-text {
+  margin-top: 0;
+}
 @media screen and (min-width: 750px) {
-  .rich-text:not(.rich-text--full-width),
+  /* .rich-text:not(.rich-text--full-width),
   .rich-text--full-width.color-background-1 {
     margin-top: calc(5rem + var(--page-width-margin));
     margin-bottom: calc(5rem + var(--page-width-margin));
-  }
+  } */
 
   .rich-text:not(.color-background-1) {
-    padding-top: calc(5rem + var(--page-width-margin));
+    margin-top: calc(5rem + var(--page-width-margin));
     padding-bottom: calc(5rem + var(--page-width-margin));
   }
 
